--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | Recipe page</title>
 
+  <link rel="stylesheet" href="/styles/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,63 +16,87 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <!-- div used for content Image -->
+    <section id="contentIMG">
+      <img src="/assets/images/image-omelette.jpeg" alt="omelette">
+    </section>
 
-  Simple Omelette Recipe
+    <!-- section for contents -->
+    <section id="contentHeading">
+      <h1>Simple Omelette Recipe</h1>
+      <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </section>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <!-- section for preparing time -->
+    <section id="preparationTime">
+      <h3>Preparation time</h3>
+      <ul class="unordered prepTimeUl">
+        <li class="prepTimeList"><span class="span prepSpan">Total:</span>Approximately 10 minutes</li>
+        <li class="prepTimeList"><span class="span prepSpan">Preparation:</span>5 minutes</li>
+        <li class="prepTimeList"><span class="span prepSpan">Cooking:</span> 5 minutes</li>
+      </ul>
+    </section>
 
-  Preparation time
+    <!-- section for ingredients -->
+    <section id="ingredients">
+      <h2>Ingredients</h2>
+      <ul class="unordered ingredientsUl">
+        <li class="ingredientsList">2-3 large eggs</li>
+        <li class="ingredientsList">Salt, to taste</li>
+        <li class="ingredientsList">Pepper, to taste</li>
+        <li class="ingredientsList">1 tablespoon of butter or oil</li>
+        <li class="ingredientsList">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </section>
+    
+    <!-- section for instructions -->
+    <section id="instructions">
+      <h2>Instructions</h2>
+      <ol class="orderedList instructuinsUl">
+        <li class="instructionsList"><span class="span">Beat the eggs:</span>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+          You can add a tablespoon of water or milk for a fluffier texture.</li>
+        <li class="instructionsList"><span class="span">Heat the pan:</span>Place a non-stick frying pan over medium heat and add butter or oil.</li>
+        <li class="instructionsList"><span class="span">Cook the omelette:</span>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+          the eggs evenly coat the surface.</li>
+        <li class="instructionsList"><span class="span">Add fillings (optional):</span>When the eggs begin to set at the edges but are still slightly runny in the 
+          middle, sprinkle your chosen fillings over one half of the omelette.</li>
+        <li class="instructionsList"><span class="span">Fold and serve:</span>As the omelette continues to cook, carefully lift one edge and fold it over the 
+          fillings. Let it cook for another minute, then slide it onto a plate.</li>
+        <li class="instructionsList"><span class="span"> Enjoy:</span>Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+    </section>
 
-  Ingredients
+    <!-- section for nutrition -->
+    <section id="nutrition">
+      <h2>Nutriotion</h2>
+      <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
+      <div class="nutritionTable">
+        <div class="table tableborder">
+          <p>Calories</p>
+          <p><span class="span">277kcal</span></p>
+        </div>
+        <div class="table tableborder">
+          <p>Carbs</p>
+          <p><span class="span">0g</span></p>
+        </div>
+        <div class="table tableborder">
+          <p>Protein</p>
+          <p><span class="span">20g</span></p>
+        </div>
+        <div class="table">
+          <p>Fat</p>
+          <p><span class="span">22g</span></p>
+        </div>
+      </div>
+    </section>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/dashboard">Ravichandran Kirthigesan</a>.
   </div>
 </body>
 </html>
