--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Recipe page</title>
 
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
