--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <!-- div used for content Image -->
     <section id="contentIMG">
-      <img src="/assets/images/image-omelette.jpeg" alt="omelette">
+      <img src="./assets/images/image-omelette.jpeg" alt="omelette">
     </section>
 
     <!-- section for contents -->
